--- a/creator/index.html
+++ b/creator/index.html
@@ -137,11 +137,10 @@
 							</div>
 							<div class='input-grid margin-bottom'>
 								<button id='loadFrameVersion' class='input'>Load Frame Version</button>
-								<button id='loadWideFrame' class='input' onclick='loadScript("/js/frames/groupMargin.js"); loadMarginVersion()'>Load Margin</button>
 							</div>
 							<h5 class='input-description margin-bottom'>Automatically load Frame Version when loading Frame Packs</h5>
 							<label class='checkbox-container input'>Auto load
-								<input id='autoLoadFrameVersion' type='checkbox' onchange='autoLoadFrameVersion();' checked="false">
+								<input id='autoLoadFrameVersion' type='checkbox' onchange='autoLoadFrameVersion();' checked>
 								<span class='checkmark'></span>
 							</label>
 						</div>
