header link fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	<div class='background'></div>
 	<header class='readable-background'>
-		<a href="#" hx-get="creator" hx-target="#content" hx-trigger="click"></a><h1 class='title center'>CARD CONJURER</h1></a>
+		<a href="#" hx-get="creator" hx-target="#content" hx-trigger="click"><h1 class='title center'>CARD CONJURER</h1></a>
 	</header>
 	<div>
 		<svg width="100%" height="100%" viewBox="0 0 100 100" version="1.1"
