--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	<div class='background'></div>
 	<header class='readable-background'>
-		<a href="#" hx-get="creator" hx-target="#content" hx-trigger="click"><h1 class='title center'>CARD CONJURER</h1></a>
+		<h1 class='title center'>CARD CONJURER</h1>
 	</header>
 	<div>
 		<svg width="100%" height="100%" viewBox="0 0 100 100" version="1.1"
@@ -54,7 +54,7 @@
 	<div id="content">
 		<div class='layer center'></div>
 		<div class='layer center'>
-			<h1>Welcome to Card Conjurer</h1>
+			<a href="#" hx-get="creator" hx-target="#content" hx-trigger="click"><h1>Welcome to Card Conjurer</h1></a>
 			<h3>The custom Magic: The Gathering card creator</h3>
 		</div>
 		<div class='layer center'></div>
