fix tranparent check

--- a/creator/index.html
+++ b/creator/index.html
@@ -194,7 +194,7 @@
 							</label>
 							<h5 class='input-description margin-bottom'>Highlight transparencies in card</h5>
 							<label class='checkbox-container input'>Transparencies
-								<input id='highlight-transparencies' type='checkbox' checked onchange='toggleCardBackgroundColor(this.checked);'>
+								<input id='highlight-transparencies' type='checkbox' onchange='toggleCardBackgroundColor(this.checked);'>
 								<span class='checkmark'></span>
 							</label>
 						</div>
